--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: space-around
+}
